@@ -8,7 +8,9 @@
 		<script type="text/javascript" src="js/money.js"></script>
 		<script type="text/javascript" src="js/mouse.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
+		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
+		<script type="text/javascript" src="js/buildings/camera_tower.js"></script>
 		<script type="text/javascript" src="js/unit.js"></script>
 		<script type="text/javascript" src="js/construct_manager.js"></script>
 		<script type="text/javascript" src="js/pathfinding.js"></script>
