@@ -1,3 +1,7 @@
+Build 17 (05.11.2012)
+- Some building based code optimisations
+- Added new building: Camera Tower
+
 Build 16 (18.10.2012)
 - Finially added ability to build Headquarter, but still no option to produce new units.
 - Project source code moved to GitHub
